Closed Bug 1164197 Opened 11 years ago Closed 11 years ago

Logging of uninitialized string buffer in sdp_parse_attr_rtr

Categories

(Core :: WebRTC: Signaling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(1 file, 1 obsolete file)

https://dxr.mozilla.org/mozilla-central/source/media/webrtc/signaling/src/sdp/sipcc/sdp_attr.c#3403 |tmp| is not initialized at this point. However, this is only a problem if SDP_DEBUG_TRACE is set (which is never the case with the released code), so this is not going to be security sensitive. We should still fix.
Assignee: nobody → docfaraday
Attached file MozReview Request: bz://1164197/bwc (obsolete) —
/r/8721 - Bug 1164197: Fix bad logging statement in sdp_parse_attr_rtr. Pull down this commit: hg pull -r e44f8cd139aa72b480a8892cd08d6b1741e80cfd https://reviewboard-hg.mozilla.org/gecko/
Attachment #8605460 - Flags: review?(martin.thomson)
Comment on attachment 8605460 [details] MozReview Request: bz://1164197/bwc https://reviewboard.mozilla.org/r/8719/#review7355 Ship It!
Attachment #8605460 - Flags: review?(martin.thomson) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Attachment #8605460 - Attachment is obsolete: true
Attachment #8620272 - Flags: review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: