Bug 1164197 - Fix bad logging statement in sdp_parse_attr_rtr. r=mt